fix: prevent layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,13 +23,18 @@ a {
   padding: 50px;
   text-align: center;
   color: #fff;
+  height: 300px;
 }
 
 .active-resource .resource-name {
   font-size: 30px;
+  height: 50px;
 }
 
 .active-resource .elapsed-time {
   font-size: 64px;
   font-weight: bold;
+}
+.active-resource .time-wrapper {
+  height: 100px;
 }
